22 Mar 2001 Implement XSTORE in ESAME mode - Jan Jaeger
22 Mar 2001 Implement fast interrupt processing for MCK and PER - Jan Jaeger
22 Mar 2001 Correct interruption identification word - Jan Jaeger
22 Mar 2001 Correct interrupt mask setting in LCTL/LTCLG - Jan Jaeger
22 Mar 2001 Correct SSM/STOSM spec exc in ESAME mode - Jan Jaeger
21 Mar 2001 Correct cache invalidation in PR - Greg Smith
20 Mar 2001 Correction to 64 bit SIGP initial_cpu_reset - Jan Jaeger
18 Mar 2001 Correction to stack types in ESAME mode - Jan Jaeger
18 Mar 2001 Correct LRA/LRAG segment table entry address on cc 3 - Jan Jaeger
18 Mar 2001 Correct address types in move char instructions - Jan Jaeger
18 Mar 2001 Correct subspace_replace address type - Jan Jaeger
16 Mar 2001 Fix to allow HET files to reside on read-only media - Leland Lucius
16 Mar 2001 Fix LPSW in ESAME mode - Jan Jaeger
15 Mar 2001 Compressed CKD utilities now tolerate VM weirdness - Greg Smith
15 Mar 2001 Alternate tracks for compressed CKD volumes - Greg Smith
15 Mar 2001 Utilities display versioning and copyright info - Greg Smith
15 Mar 2001 Invalidate AEA and AIA cache on SIE entry/exit - Jan Jaeger
15 Mar 2001 Present device end on terminating console session - Jan Jaeger
13 Mar 2001 Fix address types in assist/float/ieee instructions - Jan Jaeger
10 Mar 2001 Stop all CPU's in release_config - Jan Jaeger
10 Mar 2001 Fix CPU entering manual state on disabled wait - Jan Jaeger
10 Mar 2001 Various fixes to configurable features logic - Jan Jaeger
08 Mar 2001 Fix ESAME Add/Subtract/Multiply/Divide
            when both operands address same register - Jan Jaeger
07 Mar 2001 Correction to MLG/MLGR - Jan Jaeger
07 Mar 2001 Add sh panel command - Bernard van der Helm
07 Mar 2001 Add 9221 power-off diagnose - Jan Jaeger
05 Mar 2001 Correction to RP - Peter Stammbach
05 Mar 2001 Correction to DIAG204 - Jan Jaeger
05 Mar 2001 64 Bit fix to program_return_unstack - Jan Jaeger
05 Mar 2001 SIE corrections to EPSW and STFL - Jan Jaeger